--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,8 @@ dependencies {
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
     testCompile 'junit:junit:4.12'
+    compile group: 'com.j256.ormlite', name: 'ormlite-android', version: '5.0'
+    compile group: 'com.github.snowdream.android.database', name: 'sqlite', version: '1.0'
+
+
 }
